# pointnerf2studio

./: .gitignore  README.md  changing_params.txt  pyproject.toml
pointnerf/: out.txt  out_train.txt
pointnerf/data/: __init__.py  nerf_synth360_ft_dataset.py  nerf_synth360_ft_studio_dataset.py  studio_datamanager.py
pointnerf/dev_scripts/w_colmap_n360/: col_chair.sh  col_chair_points.sh  col_drums.sh  col_drums_points.sh  col_ficus.sh  col_ficus_points.sh  col_hotdog.sh  col_hotdog_points.sh  col_lego.sh  col_lego_points.sh  col_materials.sh  col_materials_points.sh  col_mic.sh  col_mic_points.sh  col_ship.sh  col_ship_points.sh
pointnerf/dev_scripts/w_n360/: chair.sh  chair_points.sh  chair_studio.sh  chair_test.sh  drums.sh  drums_points.sh  drums_test.sh  ficus.sh  ficus_points.sh  ficus_test.sh  hotdog.sh  hotdog_points.sh  hotdog_test.sh  lego.sh  lego_points.sh  lego_test.sh  materials.sh  materials_points.sh  materials_test.sh  mic.sh  mic_points.sh  mic_test.sh  ship.sh  ship_points.sh  ship_test.sh
pointnerf/dev_scripts/w_scannet_etf/: scene101.sh  scene101_points.sh  scene101_test.sh  scene241.sh  scene241_points.sh  scene241_test.sh
pointnerf/dev_scripts/w_tt_ft/: barn.sh  barn_points.sh  barn_test.sh  caterpillar.sh  caterpillar_points.sh  caterpillar_test.sh  family.sh  family_points.sh  truck.sh  (+6 more)
pointnerf/models/: __init__.py
pointnerf/nerfstudio/: studio_config.py  studio_datamanager.py  studio_model.py  studio_pipeline.py  studio_scheduler.py  studio_utils.py
pointnerf/options/: base_options.py
pointnerf/run/: gen_pnts.py  train_studio.py
(+13 files in other folders)
